module: add web module

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -17,5 +17,6 @@
     <modules>
         <module>base</module>
         <module>orm</module>
+        <module>web</module>
     </modules>
 </project>
