module: add ai-starter

--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>metadata-starter</module>
+        <module>ai-starter</module>
     </modules>
 
     <properties>
