module: add cron-starter

--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>metadata-starter</module>
         <module>ai-starter</module>
+        <module>cron-starter</module>
     </modules>
 
     <properties>
