Refactor: Add the implementations of ContextInterceptor and PermissionService into the app module.

--- a/apps/demo-app/src/main/resources/application-dev.yml
+++ b/apps/demo-app/src/main/resources/application-dev.yml
@@ -48,4 +48,4 @@ rocketmq:
     flow-async-task:
     flow-event:
     common-log:
-    reload-metadata:
+    inner-broadcast: openmeta-platform-inner-broadcast
