--- a/deploy/demo-app/docker-compose.yml
+++ b/deploy/demo-app/docker-compose.yml
@@ -28,13 +28,18 @@ services:
       # Specify the directory containing the initial SQL scripts
       - ./init_mysql:/docker-entrypoint-initdb.d
 
-#  openmeta:
-#    image: openmeta/demo:latest
-#    ports:
-#      - 80:80
-#    depends_on:
-#      - redis
-#      - mysql
+  openmeta:
+    image: openmeta/demo-app:0.3.2
+    ports:
+      - 80:80
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/demo?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
+      - SPRING_DATA_REDIS_HOST=redis
+      - ROCKETMQ_NAME_SERVER=192.168.1.3:9876
+    depends_on:
+      - redis
+      - mysql
 
 #  nginx:
 #    image: nginx:1.27.0-alpine
