--- a/deploy/efk/docker-compose.yml
+++ b/deploy/efk/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: elasticsearch:8.15.0
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     volumes:
       - ~/data/elasticsearch:/usr/share/elasticsearch/data
     ports:
@@ -12,9 +14,6 @@ services:
 
   kibana:
     image: kibana:8.15.0
-#    environment:
-#      ELASTICSEARCH_USERNAME: elastic
-#      ELASTICSEARCH_PASSWORD: admin
     depends_on:
       - elasticsearch
     ports:
