feat: add es-starter module

--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -18,6 +18,7 @@
         <module>ai-starter</module>
         <module>cron-starter</module>
         <module>flow-starter</module>
+        <module>es-starter</module>
     </modules>
 
     <properties>
