--- a/apps/demo-app/src/main/resources/application-dev.yml
+++ b/apps/demo-app/src/main/resources/application-dev.yml
@@ -2,6 +2,7 @@ debug: false
 system:
   name: Demo Application
   enable-auth: false
+  default-language: en-US
 security:
   encryption:
     password: 12345678
