--- a/apps/demo-app/src/main/resources/application-dev.yml
+++ b/apps/demo-app/src/main/resources/application-dev.yml
@@ -37,16 +37,16 @@ spring:
 #    index:
 #      changelog: demo_dev_changelog
 #
-#rocketmq:
-#  name-server: 127.0.0.1:9876
-#  producer:
-#    group: my-producer-group
-#    send-message-timeout: 3000
-#  consumer:
-#    group: my-consumer-group
-#  topics:
-#    cron-task:
-#    change-log:
-#    flow-async-task:
-#    flow-event:
-#    inner-broadcast: openmeta-platform-inner-broadcast
+rocketmq:
+  name-server: 127.0.0.1:9876
+  producer:
+    group: my-producer-group
+    send-message-timeout: 3000
+  consumer:
+    group: my-consumer-group
+  topics:
+    cron-task:
+    change-log:
+    flow-async-task:
+    flow-event:
+    inner-broadcast: openmeta-platform-inner-broadcast
