--- a/starters/metadata-starter/pom.xml
+++ b/starters/metadata-starter/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>info.openmeta</groupId>
         <artifactId>starters</artifactId>
-        <version>0.5.3</version>
+        <version>0.5.4</version>
     </parent>
 
     <artifactId>metadata-starter</artifactId>
@@ -17,6 +17,12 @@
             <groupId>info.openmeta</groupId>
             <artifactId>web</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.11.0</version>
         </dependency>
 
     </dependencies>
