--- a/apps/demo-app/pom.xml
+++ b/apps/demo-app/pom.xml
@@ -19,6 +19,11 @@
             <version>0.5.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>info.openmeta</groupId>
+            <artifactId>es-starter</artifactId>
+            <version>0.5.4</version>
+        </dependency>
     </dependencies>
 
     <build>
