--- a/apps/demo-app/src/main/resources/application-dev.yml
+++ b/apps/demo-app/src/main/resources/application-dev.yml
@@ -30,15 +30,15 @@ spring:
       connection-timeout: 30000
       connection-test-query: SELECT 1
       pool-name: HikariPool-Demo
-#  elasticsearch:
-#    cluster: http://localhost:9200
-#    username: your_username
-#    password: your_password
-#    index:
-#      changelog: demo_dev_changelog
-#
+  elasticsearch:
+    cluster: http://localhost:9200
+    username: your_username
+    password: your_password
+    index:
+      changelog: demo_dev_changelog
+
 rocketmq:
-  name-server: 127.0.0.1:9876
+  name-server: 10.89.152.172:9876
   producer:
     group: my-producer-group
     send-message-timeout: 3000
@@ -46,7 +46,7 @@ rocketmq:
     group: my-consumer-group
   topics:
     cron-task:
-    change-log:
+    change-log: dev_demo_change_log
     flow-async-task:
     flow-event:
     inner-broadcast: openmeta-platform-inner-broadcast
