--- a/deploy/rocketmq/docker-compose.yml
+++ b/deploy/rocketmq/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       - NAMESRV_ADDR=127.0.0.1:9876
     command: sh mqnamesrv
+    networks:
+      - rocketmq-network
 
   broker:
     image: apache/rocketmq:5.3.0
@@ -22,6 +24,8 @@ services:
       - BROKER_NAME=DefaultBroker
       - BROKER_IP1=127.0.0.1
     command: sh mqbroker -n namesrv:9876
+    networks:
+      - rocketmq-network
 
   dashboard:
     image: apacherocketmq/rocketmq-dashboard:latest
@@ -31,3 +35,9 @@ services:
       - 8080:8080
     environment:
       - JAVA_OPTS=-Drocketmq.namesrv.addr=namesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=false
+    networks:
+      - rocketmq-network
+
+networks:
+  rocketmq-network:
+    driver: bridge
