--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -18,6 +18,7 @@
     </modules>
 
     <properties>
+        <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
