--- a/deploy/demo-app/docker-compose.yml
+++ b/deploy/demo-app/docker-compose.yml
@@ -9,9 +9,13 @@ services:
 #  postgres:
 #    image: postgres:16.3-alpine
 #    ports:
-#      - "5432:5432"
+#      - 5432:5432
+#    environment:
+#      - POSTGRES_USER=admin
+#      - POSTGRES_PASSWORD=admin
+#      - POSTGRES_DB=demo
 #    volumes:
-#      - ./postgres-data:/var/lib/postgresql/data
+#      - ~/data/postgres-data:/var/lib/postgresql/data
 
   mysql:
     image: mysql:8.3.0
@@ -24,7 +28,7 @@ services:
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=admin
     volumes:
-      - ~/mysql_data:/var/lib/mysql
+      - ~/data/mysql_data:/var/lib/mysql
       # Specify the directory containing the initial SQL scripts
       - ./init_mysql:/docker-entrypoint-initdb.d
 
