--- a/framework/base/pom.xml
+++ b/framework/base/pom.xml
@@ -70,12 +70,17 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.17.0</version>
+        </dependency>
 
-        <!-- tika: file mimetype check -->
+        <!-- extract file mimetype -->
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>2.4.1</version>
+            <version>3.0.0</version>
         </dependency>
 
     </dependencies>
