--- a/apps/demo-app/src/main/resources/application-dev.yml
+++ b/apps/demo-app/src/main/resources/application-dev.yml
@@ -18,6 +18,24 @@ spring:
       password: admin
       timeout: 1000
   datasource:
+#    dynamic:
+#      enable: true
+#      datasource:
+#        primary:
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://localhost:3306/demo
+#          username: root
+#          password: admin
+#        db1:
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://localhost:3306/db1
+#          username: root
+#          password: admin
+#        db2:
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://localhost:3306/db2
+#          username: root
+#          password: admin
     url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: admin
