Opt: support read-write-separation

--- a/apps/demo-app/src/main/resources/application-dev.yml
+++ b/apps/demo-app/src/main/resources/application-dev.yml
@@ -23,6 +23,7 @@ spring:
   datasource:
 #    dynamic:
 #      enable: true
+#      read-write-separation: true
 #      datasource:
 #        primary:
 #          driver-class-name: com.mysql.cj.jdbc.Driver
