--- a/deploy/mini-app/docker-compose.yml
+++ b/deploy/mini-app/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       # For testing environment only
       - MYSQL_ROOT_PASSWORD=admin
-      - MYSQL_DATABASE=demo
+      - MYSQL_DATABASE=mini
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=admin
     volumes:
@@ -33,12 +33,12 @@ services:
       - ./init_mysql:/docker-entrypoint-initdb.d
 
   openmeta:
-    image: openmeta/demo-app:0.7.3
+    image: openmeta/mini-app:0.7.3
     ports:
       - 80:80
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/demo?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/mini?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
       - SPRING_DATA_REDIS_HOST=redis
     depends_on:
       - redis
