--- a/apps/mini-app/src/main/resources/application-dev.yml
+++ b/apps/mini-app/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
       timeout: 1000
   datasource:
     url: jdbc:mysql://localhost:3306/mini?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
-    username: root
+    username: admin
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
