--- a/deploy/demo-app/docker-compose.yml
+++ b/deploy/demo-app/docker-compose.yml
@@ -28,11 +28,11 @@ services:
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=admin
     volumes:
-      - ~/data/mysql_data:/var/lib/mysql
+      - ~/data/mysql/demo:/var/lib/mysql
       # Specify the directory containing the initial SQL scripts
       - ./init_mysql:/docker-entrypoint-initdb.d
 
-  openmeta:
+  demo-app:
     image: openmeta/demo-app:0.7.3
     ports:
       - 80:80
@@ -40,6 +40,11 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/demo?useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
       - SPRING_DATA_REDIS_HOST=redis
+      - ROCKETMQ_NAME_SERVER=localhost:9876
+      - SPRING_ELASTICSEARCH_CLUSTER=http://localhost:9200
+      - SPRING_ELASTICSEARCH_USERNAME=your_username
+      - SPRING_ELASTICSEARCH_PASSWORD=your_password
+      - SPRING_ELASTICSEARCH_INDEX_CHANGELOG=demo_dev_changelog
     depends_on:
       - redis
       - mysql
