--- a/starters/file-starter/pom.xml
+++ b/starters/file-starter/pom.xml
@@ -50,7 +50,13 @@
             <version>5.3.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.aliyun.oss/aliyun-sdk-oss -->
+        <!-- Object storage service clients -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.14</version>
+        </dependency>
+
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
