--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -20,6 +20,7 @@
         <module>flow-starter</module>
         <module>es-starter</module>
         <module>file-starter</module>
+        <module>designer-starter</module>
     </modules>
 
 </project>
