--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -6,12 +6,17 @@
     <parent>
         <artifactId>openmeta</artifactId>
         <groupId>info.openmeta</groupId>
-        <version>0.8.6</version>
+        <version>0.8.10</version>
     </parent>
 
     <artifactId>starters</artifactId>
     <description>Starter modules that can be combined into an application.</description>
     <packaging>pom</packaging>
+
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <modules>
         <module>metadata-starter</module>
