--- a/apps/demo-app/pom.xml
+++ b/apps/demo-app/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.1</version>
+        <version>3.3.7</version>
         <relativePath/>
     </parent>
 
@@ -18,7 +18,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <openmeta.version>0.8.8</openmeta.version>
+        <openmeta.version>0.8.13</openmeta.version>
     </properties>
 
     <dependencies>
@@ -37,6 +37,12 @@
         <dependency>
             <groupId>info.openmeta</groupId>
             <artifactId>file-starter</artifactId>
+            <version>${openmeta.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>info.openmeta</groupId>
+            <artifactId>flow-starter</artifactId>
             <version>${openmeta.version}</version>
         </dependency>
     </dependencies>
