Fix: fix the issue of creating version

--- a/apps/demo-app/pom.xml
+++ b/apps/demo-app/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>flow-starter</artifactId>
             <version>${openmeta.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>info.openmeta</groupId>
+            <artifactId>designer-starter</artifactId>
+            <version>${openmeta.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
