--- a/apps/mini-app/src/main/resources/application.yml
+++ b/apps/mini-app/src/main/resources/application.yml
@@ -21,9 +21,12 @@ spring:
   freemarker:
     # Turn off automatic inspection of freemarker templates
     checkTemplateLocation: false
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
 
 server:
   port: 80
+  shutdown: graceful
   servlet:
     encoding:
       # set http CharacterEncoding to UTF-8
